--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div id = 'canvas'>
 
     </div>
-    <button id = "clear"> Clear </button>
+    <button id = "clear"> CLEAR </button>
+    <button id = "rainbow"> Rainbow mode </button>
     <script src = 'script.js'>
     </script>
 </body>
